[package]
name = "mqtt-proto"
version = "0.1.0"
license = "MIT"
description = "MQTT v3.1/v3.1.1/v5.0 protocol sync/async codec."
authors = ["LinFeng <thewawar@gmail.com>"]
repository = "https://github.com/akasamq/mqtt-proto"
readme = "README.md"
keywords = ["mqtt", "codec", "network", "async"]
categories = ["network-programming", "asynchronous"]
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
bytes = "1.6"
futures-lite = "2.3"
tokio = { version = "1.37", features = ["io-util"] }
thiserror = "1.0"
simdutf8 = "0.1"

# Only for fuzz testing
arbitrary = { version = "1.3", optional = true, features = ["derive"] }

[dev-dependencies]
proptest = "1.4"
tokio = { version = "1.37", features = ["full"] }
